--- a/slider/styles.css
+++ b/slider/styles.css
@@ -96,7 +96,7 @@ header ul li a {
 }
 
 .controls li:hover {
-  background: #ffeb3b;
+  background: white;
 }
 
 .controls li:before {
@@ -136,6 +136,7 @@ header ul li a {
 }
 
 .contentBx div p {
+  margin-bottom: 20px;
   color: #fff;
   font-size: 1.1em;
 }
@@ -147,8 +148,19 @@ header ul li a {
   padding: 10px 30px;
   background: #fff;
   margin-top: 10px;
+  margin-bottom: 15px;
   font-weight: 500;
   text-decoration: none;
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+
+.contentBx div a {
+  padding: 5px 10px;
+  color: black;
+  background: white;
+}
+
+.main_block {
+  max-width: 100%;
 }
